# sca-dast-aws-codebuild-cloud

./: README.md  conanfile.txt  package.json
cFamily/: conanfile.py
manifests/dart/pubspec/: pubspec.yaml
manifests/go files/: go.mod
manifests/java/gradle/: build.gradle  build.gradle.kts  gradle.lockfile
manifests/java/maven/: mailchimp-java-api.pom  pom.xml
manifests/net/nuGet/: nuget_csproj_manifest.csproj  nuget_vbproj_manifest.vbproj  packages.config  packages.lock.json  paket.dependencies  project.assets.json
manifests/nodeJs/npm/: package-lock.json  package.json
manifests/nodeJs/yarn/v2_yarn/: package.json
manifests/php/composer/: composer.json  soos_version.txt
manifests/python/: requirements.txt
manifests/python/pdm/: pyproject.toml
manifests/python/poetry/: pyproject.toml
manifests/ruby/rubyGems/: Gemfile
manifests/rust/cargo/: Cargo.toml
soos/: requirements.txt  soos.py
