[project]
name = "manifest-python-pdm"
version = "1.2.3"
description = "Sample Pythong PDM manifest."
authors = [
    {name = "", email = "testing@soos.io"},
]
license = {text = "MIT"}
requires-python = ">=3.7, <3.9"
dependencies = [
    "Flask~=1.1.4",
    "Flask-Compress~=1.5.0",
    "markupsafe~=2.0.1",
    "pyModbusTCP~=0.1.8",
    "requests~=2.24.0",
    "tzlocal~=2.1",
    "click~=7.1.2",
]

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.dev-dependencies]
dev = [
    "flake8>=4.0.1",
    "pep8-naming>=0.12.1",
    "flake8-docstrings>=1.6.0",
    "pytest>=7.1.1",
    "pytest-cov>=3.0.0",
    "pytest-xdist>=2.5.0",
]

[project.optional-dependencies]
distribution = ["PyInstaller~=4.10"]
gui = ["PySide2~=5.14.2.3"]
